--- a/Petini_Capston_Mini/src/app/cart-order/view-cart/view-cart.component.html
+++ b/Petini_Capston_Mini/src/app/cart-order/view-cart/view-cart.component.html
@@ -71,7 +71,7 @@
               </div>
               <div>
                 <button mat-raised-button
-                class="btn-register btn btn-primary btn-block w-100 fa-lg gradient-custom-2 m-0"><span>Đặt hàng</span> </button>
+                class="btn-register btn btn-primary btn-block w-100 fa-lg gradient-custom-2 m-0" type="button" (click)="order()"><span>Đặt hàng</span> </button>
               </div>
             </div>
           </div>
