--- a/Petini_Capston_Mini/src/app/login/login.component.html
+++ b/Petini_Capston_Mini/src/app/login/login.component.html
@@ -20,10 +20,10 @@
                   <a class="nav-link active fs-5" aria-current="page" routerLink="/Service">Dịch Vụ</a>
                 </li>
                 <li class="nav-item mx-2  d-flex ">
-                  <a class="nav-link active fs-5" aria-current="page" routerLink="Shop">Sản Phẩm</a>
+                  <a class="nav-link active fs-5" aria-current="page" routerLink="/Shop">Sản Phẩm</a>
                 </li>
                 <li class="nav-item mx-2  d-flex ">
-                  <a class="nav-link active fs-5" aria-current="page" routerLink="Pet">Nhận Nuôi</a>
+                  <a class="nav-link active fs-5" aria-current="page" routerLink="/Pet">Nhận Nuôi</a>
                 </li>
 
 
