--- a/Petini_Capston_Mini/src/app/pet-detail/pet-detail.component.html
+++ b/Petini_Capston_Mini/src/app/pet-detail/pet-detail.component.html
@@ -3,7 +3,7 @@
     <div class="content row justify-content-between mb-4">
       <div class="col-md-7">
         <div class=" justify-content-center d-flex pt-4">
-          <img src="/assets/images/pet-1.jpg" class="  rounded img-fluid ">
+          <img src="" class="  rounded img-fluid ">
 
         </div>
       </div>
