--- a/Petini_Capston_Mini/src/app/pop-up/success/success.component.html
+++ b/Petini_Capston_Mini/src/app/pop-up/success/success.component.html
@@ -14,7 +14,7 @@
 
     </div>
     <div class="button">
-      <button class="cancel"  mat-dialog-close cdkFocusRegionStart color="basic" mat-raised-button> DONE</button>
+      <button class="cancel"  mat-dialog-close cdkFocusRegionStart color="basic" mat-raised-button type="button" (click)="closeDialog()"> DONE</button>
     </div>
   </div>
 </div>
