--- a/Petini_Capston_Mini/src/app/service/service.component.html
+++ b/Petini_Capston_Mini/src/app/service/service.component.html
@@ -7,7 +7,7 @@
           <div class="title-slogan">
             <p>Trải nghiệm tốt những dịch vụ của PETINI</p>
           </div>
-          <img src="/assets/images/line.png" alt="">
+          <img [src]="" class=" rounded img-fluid" alt="">
         </div>
         <div class="content-items container">
           <div class="row">
