--- a/Petini_Capston_Mini/src/app/shop-owner/manage-account/manage-account.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-account/manage-account.component.html
@@ -24,11 +24,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr matRipple *ngFor="let post of valuesCustomer | paginate:{
-              itemsPerPage: tableSize,
-              currentPage: page,
-              totalItems: count
-              };
+                <tr matRipple *ngFor="let post of valuesCustomer ;
               let i = index" [style.cursor]="'pointer'" routerLink="AccountDetail"
                   (click)="onItemSelector(post.id, post.username)">
                   <td>{{post.id}}</td>
@@ -88,16 +84,6 @@
                 </tr>
               </tbody>
             </table>
-            <!-- pagination -->
-            <div class="row w-100">
-              <div class="col-sm-6">
-              </div>
-              <div class="col-sm-6 d-flex justify-content-center">
-                <pagination-controls previousLabel="Prev" nextLabel="Next"
-                  (pageChange)="onTableDataChangeCustomer($event)">
-                </pagination-controls>
-              </div>
-            </div>
           </mat-tab>
           <mat-tab label="Chủ Tiệm">
             <table class="table table-striped table-hover mt-2" style="height:60vh">
@@ -176,16 +162,6 @@
                 </tr>
               </tbody>
             </table>
-            <!-- pagination -->
-            <div class="row w-100">
-              <div class="col-sm-6">
-              </div>
-              <div class="col-sm-6 d-flex justify-content-center">
-                <pagination-controls previousLabel="Prev" nextLabel="Next"
-                  (pageChange)="onTableDataChangeOwner($event)">
-                </pagination-controls>
-              </div>
-            </div>
           </mat-tab>
         </mat-tab-group>
       </div>
