--- a/Petini_Capston_Mini/src/app/shop-owner/manage-order/manage-order.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-order/manage-order.component.html
@@ -1,1 +1,382 @@
-<p>manage-order works!</p>
+<div class="container-fluid">
+  <div class="header row">
+    <div class="col-6">
+      <h1>Quản lý đơn hàng</h1>
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col col ">
+      <div class="body card mb-4">
+        <mat-tab-group>
+          <mat-tab label="Tất cả">
+
+            <table class="table table-striped table-hover mt-2 align-middle" style="height:60vh">
+              <thead class="">
+                <tr class="fw-5">
+                  <th class="w-2">ID</th>
+                  <th>Tên</th>
+                  <th class="">Sản phẩm</th>
+                  <th class="w-1">Tổng tiền</th>
+                  <th class="w-1">Trạng thái</th>
+                  <th class="w-1">Xác nhận</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr matRipple *ngFor="let post of valuesAll ;
+                let i = index"   >
+                  <td>
+                    {{post.id}}
+                  </td>
+                  <td>
+
+                    <div class="d-flex align-items-center">
+                      <!-- <img [src]="post.imageUrl" alt="" style="width: 45px; height: 45px" class="rounded-circle" /> -->
+                      <div class="ms-3">
+                        <p class="fw-bold mb-1"> {{post.createdBy}}</p>
+                        <!-- <p class="text-muted mb-0 overflow-hidden text-break"> {{post.description}}</p> -->
+                      </div>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="ms-3">
+                      <p class="fw-bold mb-1"> {{post.cart.cartProduct[0].product.name}}</p>
+                      <p class="text-muted mb-0 overflow-hidden text-break"> x {{post.cart.cartProduct[0].quantity}}</p>
+                    </div>
+                  </td>
+                  <td>
+                    {{post.cart.totalPrice}}
+                  </td>
+                  <td> <span class="badge rounded-pill d-inline"
+                      [class]="post.status != 'PENDING' ? 'badge-success' : 'badge-warning' ">
+                      {{post.status == 'PENDING' ? 'Chờ duyệt' : post.status == "ACCEPT" ? 'Chấp nhận' : 'Từ chối' }}</span></td>
+
+
+                  <td class="text-center">
+                    <button *ngIf="post.status != 'ACCEPT'" mat-icon-button color="primary" (click)="accept(post.id)"> <mat-icon>done_outline</mat-icon></button>
+                    <button mat-icon-button color="accent" (click)="reject(post.id)"> <mat-icon>close</mat-icon></button>
+
+                  </td>
+                </tr>
+                <tr *ngIf="valuesAll.length < 1">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesAll.length < 2">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesAll.length < 3">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesAll.length < 4">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesAll.length < 5">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+
+          </mat-tab>
+          <mat-tab label="Đang chờ">
+
+            <table class="table table-striped table-hover mt-2 align-middle" style="height:60vh">
+              <thead class="">
+                <tr class="fw-5">
+                  <th class="w-2">ID</th>
+                  <th>Tên</th>
+                  <th class="">Sản phẩm</th>
+                  <th class="w-1">Tổng tiền</th>
+                  <th class="w-1">Trạng thái</th>
+                  <th class="w-1">Xác nhận</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr matRipple *ngFor="let post of valuesPending;
+                let i = index"   >
+                  <td>
+                    {{post.id}}
+                  </td>
+                  <td>
+
+                    <div class="d-flex align-items-center">
+                      <!-- <img [src]="post.imageUrl" alt="" style="width: 45px; height: 45px" class="rounded-circle" /> -->
+                      <div class="ms-3">
+                        <p class="fw-bold mb-1"> {{post.createdBy}}</p>
+                        <!-- <p class="text-muted mb-0 overflow-hidden text-break"> {{post.description}}</p> -->
+                      </div>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="ms-3">
+                      <p class="fw-bold mb-1"> {{post.cart.cartProduct[0].product.name}}</p>
+                      <p class="text-muted mb-0 overflow-hidden text-break"> x {{post.cart.cartProduct[0].quantity}}</p>
+                    </div>
+                  </td>
+                  <td>
+                    {{post.cart.totalPrice}}
+                  </td>
+                  <td> <span class="badge rounded-pill d-inline"
+                      [class]="post.status != 'PENDING' ? 'badge-success' : 'badge-warning' ">{{post.status
+                      == 'PENDING' ? 'Chờ duyệt' : 'Chấp nhận' }}</span></td>
+                  <td class="text-center">
+                    <button mat-icon-button color="accent"> <mat-icon>edit</mat-icon></button>
+                  </td>
+                </tr>
+                <tr *ngIf="valuesPending.length < 1">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesPending.length < 2">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesPending.length < 3">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesPending.length < 4">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesPending.length < 5">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+
+          </mat-tab>
+          <mat-tab label="Hoàn thành">
+
+
+            <table class="table table-striped table-hover mt-2 align-middle" style="height:60vh">
+              <thead class="">
+                <tr class="fw-5">
+                  <th class="w-2">ID</th>
+                  <th>Tên</th>
+                  <th class="">Sản phẩm</th>
+                  <th class="w-1">Tổng tiền</th>
+                  <th class="w-1">Trạng thái</th>
+                  <th class="w-1">Xác nhận</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr matRipple *ngFor="let post of valuesFinished ;
+                let i = index"   >
+                  <td>
+                    {{post.id}}
+                  </td>
+                  <td>
+
+                    <div class="d-flex align-items-center">
+                      <!-- <img [src]="post.imageUrl" alt="" style="width: 45px; height: 45px" class="rounded-circle" /> -->
+                      <div class="ms-3">
+                        <p class="fw-bold mb-1"> {{post.createdBy}}</p>
+                        <!-- <p class="text-muted mb-0 overflow-hidden text-break"> {{post.description}}</p> -->
+                      </div>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="ms-3">
+                      <p class="fw-bold mb-1"> {{post.cart.cartProduct[0].product.name}}</p>
+                      <p class="text-muted mb-0 overflow-hidden text-break"> x {{post.cart.cartProduct[0].quantity}}</p>
+                    </div>
+                  </td>
+                  <td>
+                    {{post.cart.totalPrice}}
+                  </td>
+                  <td> <span class="badge rounded-pill d-inline"
+                      [class]="post.status != 'PENDING' ? 'badge-success' : 'badge-warning' ">{{post.status
+                      == 'PENDING' ? 'Chờ duyệt' : 'Chấp nhận' }}</span></td>
+                  <td class="text-center">
+                    <button mat-icon-button color="accent"> <mat-icon>edit</mat-icon></button>
+                  </td>
+                </tr>
+                <tr *ngIf="valuesFinished.length < 1">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesFinished.length < 2">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesFinished.length < 3">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesFinished.length < 4">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesFinished.length < 5">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+
+          </mat-tab>
+          <mat-tab label="Đã hủy">
+
+
+            <table class="table table-striped table-hover mt-2 align-middle" style="height:60vh">
+              <thead class="">
+                <tr class="fw-5">
+                  <th class="w-2">ID</th>
+                  <th>Tên</th>
+                  <th class="">Sản phẩm</th>
+                  <th class="w-1">Tổng tiền</th>
+                  <th class="w-1">Trạng thái</th>
+                  <th class="w-1">Xác nhận</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr matRipple *ngFor="let post of valuesCancel;
+                let i = index"   >
+                  <td>
+                    {{post.id}}
+                  </td>
+                  <td>
+
+                    <div class="d-flex align-items-center">
+                      <!-- <img [src]="post.imageUrl" alt="" style="width: 45px; height: 45px" class="rounded-circle" /> -->
+                      <div class="ms-3">
+                        <p class="fw-bold mb-1"> {{post.createdBy}}</p>
+                        <!-- <p class="text-muted mb-0 overflow-hidden text-break"> {{post.description}}</p> -->
+                      </div>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="ms-3">
+                      <p class="fw-bold mb-1"> {{post.cart.cartProduct[0].product.name}}</p>
+                      <p class="text-muted mb-0 overflow-hidden text-break"> x {{post.cart.cartProduct[0].quantity}}</p>
+                    </div>
+                  </td>
+                  <td>
+                    {{post.cart.totalPrice}}
+                  </td>
+                  <td> <span class="badge rounded-pill d-inline"
+                      [class]="post.status != 'PENDING' ? 'badge-success' : 'badge-warning' ">{{post.status
+                      == 'PENDING' ? 'Chờ duyệt' : 'Chấp nhận' }}</span></td>
+                  <td class="text-center">
+                    <button mat-icon-button color="accent"> <mat-icon>edit</mat-icon></button>
+                  </td>
+                </tr>
+                <tr *ngIf="valuesCancel.length < 1">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesCancel.length < 2">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesCancel.length < 3">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesCancel.length < 4">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesCancel.length < 5">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+
+          </mat-tab>
+        </mat-tab-group>
+      </div>
+    </div>
+
+  </div>
+
+
+</div>
