--- a/Petini_Capston_Mini/src/app/shop-owner/manage-pet/manage-pet.component.html
+++ b/Petini_Capston_Mini/src/app/shop-owner/manage-pet/manage-pet.component.html
@@ -1,1 +1,214 @@
-<p>manage-pet works!</p>
+<div class="container-fluid">
+  <div class="header row">
+    <div class="col-6">
+      <h1>Quản lý Thú Cưng</h1>
+    </div>
+    <div class="col-6 text-end "> <button mat-raised-button routerLink="AddPet">Tạo Thú Cưng</button></div>
+
+  </div>
+
+  <div class="row">
+    <div class="col col ">
+      <div class="body card mb-4">
+        <mat-tab-group>
+          <mat-tab label="Đang chờ nhận nuôi">
+
+            <table class="table table-striped table-hover mt-2 align-middle" style="height:60vh">
+              <thead class="">
+                <tr class="fw-5">
+                  <th class="w-2">ID</th>
+                  <th>Tên</th>
+                  <th class="w-1">Giống</th>
+                  <th class="w-1">Tuổi</th>
+                  <th class="w-1">Cân nặng</th>
+                  <th class="w-1">Màu sắc</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr matRipple *ngFor="let post of valuesNOT_ADOPTED ;
+                let i = index" [style.cursor]="'pointer'" routerLink="BookDetail" (click)="onItemSelector(post.name)">
+                  <td>
+                    {{post.id}}
+                  </td>
+                  <td>
+
+                    <div class="d-flex align-items-center">
+                      <!-- <img [src]="post.imageUrl" alt="" style="width: 45px; height: 45px" class="rounded-circle" /> -->
+                      <div class="ms-3">
+                        <p class="fw-bold mb-1"> {{post.name}}</p>
+                      </div>
+                    </div>
+                  </td>
+                  <td>
+                    {{post.petType}}
+                  </td>
+                  <td>
+                    {{post.age}}
+                  </td>
+
+                  <td>
+                    <!-- <span class="badge rounded-pill d-inline"
+                      [class]="post.status != 'PENDING' ? 'badge-success' : 'badge-warning' ">{{post.status
+                      == 'PENDING' ? 'Chờ duyệt' : 'Chấp nhận' }}</span> -->
+                      {{post.petType}}
+                    </td>
+                  <td>
+                    {{post.color}}
+                  </td>
+
+                </tr>
+                <tr *ngIf="valuesNOT_ADOPTED.length < 1">
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesNOT_ADOPTED.length < 2">
+                  <td></td>
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesNOT_ADOPTED.length < 3">
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesNOT_ADOPTED.length < 4">
+                  <td></td>
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesNOT_ADOPTED.length < 5">
+                  <td></td>
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+
+
+              </tbody>
+            </table>
+
+          </mat-tab>
+          <mat-tab label="Đã nhận nuôi">
+
+            <table class="table table-striped table-hover mt-2 align-middle" style="height:60vh">
+              <thead class="">
+                <tr class="fw-5">
+                  <th class="w-2">ID</th>
+                  <th>Tên</th>
+                  <th class="w-1">Giống</th>
+                  <th class="w-1">Tuổi</th>
+                  <th class="w-1">Giới tính</th>
+                  <th class="w-1">Màu sắc</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr matRipple *ngFor="let post of valuesADOPTED;
+                let i = index" [style.cursor]="'pointer'" routerLink="BookDetail" (click)="onItemSelector(post.id)">
+                  <td>
+                    {{post.id}}
+                  </td>
+                  <td>
+
+                    <div class="d-flex align-items-center">
+                      <!-- <img [src]="post.imageUrl" alt="" style="width: 45px; height: 45px" class="rounded-circle" /> -->
+                      <div class="ms-3">
+                        <p class="fw-bold mb-1"> {{post.createdBy}}</p>
+                        <!-- <p class="text-muted mb-0 overflow-hidden text-break"> {{post.description}}</p> -->
+                      </div>
+                    </div>
+                  </td>
+                  <td>
+                    {{post.bookingAfterCare[0].petiniAfterCare.name}}
+                  </td>
+                  <td>
+                    {{post.bookingSchedules[0].timeLabel}}
+                  </td>
+
+                  <td> <span class="badge rounded-pill d-inline"
+                      [class]="post.status != 'PENDING' ? 'badge-success' : 'badge-warning' ">{{post.status
+                      == 'PENDING' ? 'Chờ duyệt' : 'Chấp nhận' }}</span></td>
+                  <td>
+                    {{post.bookingAfterCare[0].petiniAfterCare.price}}
+                  </td>
+
+                </tr>
+
+                <tr *ngIf="valuesADOPTED.length < 1">
+                  <td></td>
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesADOPTED.length < 2">
+                  <td></td>
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesADOPTED.length < 3">
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesADOPTED.length < 4">
+                  <td></td>
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr *ngIf="valuesADOPTED.length < 5">
+                  <td></td>
+                  <td></td>
+                  <!-- <td></td> -->
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+
+              </tbody>
+            </table>
+
+          </mat-tab>
+
+        </mat-tab-group>
+      </div>
+    </div>
+
+  </div>
+
+
+</div>
