--- a/Petini_Capston_Mini/src/app/pet/pet.component.html
+++ b/Petini_Capston_Mini/src/app/pet/pet.component.html
@@ -12,57 +12,20 @@
         <div class="content-items container">
           <div class="row">
             <!-- items -->
-            <a href="#" title="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
+            <a href="#"*ngFor="let item of values"  routerLink="PetDetail" [title]="item.name" (click)="onItemSelector(item.name)"
               class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-              <div class="card p-2 ">
-                <img src="/assets/images/pet-1.jpg" alt="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
+              <div class="card p-2  text-center">
+                <img [src]="item.imgURL" [alt]="item.name"
                   class="card-img-top item-img">
                 <h5
                   class="card-title text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                  Mèo Anh Lông Ngắn
+                  {{item.name}}
                 </h5>
+                <p class="text-muted card-text mb-0 overflow-hidden text-break  text-center">Tuổi: {{item.age}} - Cân nặng: {{item.weight}}</p>
                 <h6 class="card-text text-center ">Liên hệ</h6>
               </div>
             </a>
-            <!-- items -->
-            <a href="#" title="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-              class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-              <div class="card p-2 ">
-                <img src="/assets/images/pet-2.jpg" alt="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-                  class="card-img-top item-img">
-                <h5
-                  class="card-title text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                  chó poodle nâu
-                </h5>
-                <h6 class="card-text text-center ">Liên hệ</h6>
-              </div>
-            </a>
-            <!-- items -->
-            <a href="#" title="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-              class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-              <div class="card p-2 ">
-                <img src="/assets/images/pet-3.jpg" alt="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-                  class="card-img-top item-img">
-                <h5
-                  class="card-title text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                  chó alaska
-                </h5>
-                <h6 class="card-text text-center ">Liên hệ</h6>
-              </div>
-            </a>
-            <!-- items -->
-            <a routerLink="/Pet/PetDetail" title="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-              class="col-lg-3 col-md-4 col-sm-6 col-12 pb-3 ">
-              <div class="card p-2 ">
-                <img src="/assets/images/pet-4.jpg" alt="Thuốc nhỏ gáy FRONTLINE trị ve rận trên mèo"
-                  class="card-img-top item-img">
-                <h5
-                  class="card-title text-center fw-bold text-body text-capitalize item-text text-truncate d-flex align-items-center">
-                  Mèo ba tư lông ngắn
-                </h5>
-                <h6 class="card-text text-center ">Liên hệ</h6>
-              </div>
-            </a>
+
 
 
           </div>
